--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>¡Consigue tu camiseta! - AlmeríaJS</title>
-  <meta name="description" itemprop="description" content="Elije la que mas te guste y ayuda a una buena causa. Todas las camisetas se pueden pedir en modelo unisex o mujer, independientemente de como se muestren en el catálogo.">
+  <title>AlmeríaJS</title>
+  <meta name="description" itemprop="description" content="">
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicons/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicons/apple-icon-72x72.png">
